# StarTravelSFML

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.original  README.md
src/: configuration.hpp  events.cpp  main.cpp  star.hpp
